Implement skill management templates: create, edit, and list skills with navigation links

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Manage Skills</h5>
                     <p class="card-text">Add or update your skills list.</p>
-                    <a href="#" class="btn btn-secondary disabled">Coming Soon</a>
+                    <a href="{{ url_for('list_skills') }}" class="btn btn-primary">Go to Skills</a>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Manage Testimonials</h5>
                     <p class="card-text">Add client or colleague feedback.</p>
-                    <a href="#" class="btn btn-secondary disabled">Coming Soon</a>
+                    <a href="{{ url_for('list_skills') }}" class="btn btn-primary">Go to Skills</a>
                 </div>
             </div>
         </div>
