--- a/templates/public_portfolio.html
+++ b/templates/public_portfolio.html
@@ -18,6 +18,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ project.title }}</h5>
                     <p class="card-text">{{ project.description }}</p>
+                    <p class="text-muted">Posted by: {{ project.user.username }}</p>
                     {% if project.link %}
                         <a href="{{ project.link }}" class="btn btn-primary" target="_blank">View Project</a>
                     {% endif %}
@@ -34,6 +35,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ skill.name }}</h5>
                             <p class="card-text">{{ skill.level }}</p>
+                            <p class="text-muted">Posted by: {{ skill.user.username }}</p>
                         </div>
                     </div>
                 </div>
