--- a/templates/stream.html
+++ b/templates/stream.html
@@ -15,7 +15,7 @@
             <div class="card-body">
                 <h5>{{ project.title }}</h5>
                 <p>{{ project.description }}</p>
-                <small class="text-muted">By {{ project.user.username }}</small>
+                <small class="text-muted">By {{ project.user.display_name or project.user.username }}</small>
                 {% if project.user.avatar_url %}
                     <img src="{{ project.user.avatar_url }}" width="30" class="rounded-circle ms-2">
                 {% endif %}
@@ -31,7 +31,7 @@
                 <h6 class="mt-3">Comments ({{ project.comments|length }})</h6>
                     <ul class="list-unstyled">
                         {% for comment in project.comments %}
-                            <li><strong>{{ comment.user.username }}</strong>: {{ comment.content }}</li>
+                            <li><strong>{{ comment.user.displayname or comment.username}}</strong>: {{ comment.content }}</li>
                         {% endfor %}
                     </ul>
 
@@ -58,7 +58,7 @@
                 {% if skill.user.avatar_url %}
                     <img src="{{ skill.user.avatar_url }}" width="30" class="rounded-circle ms-2">
                 {% endif %}
-                <small class="text-muted">By {{ skill.user.username }}</small>
+                <small class="text-muted">By {{ skill.user.display_name or skill.user.username }}</small>
             </div>
         </div>
     </div>
