--- a/templates/my_portfolio.html
+++ b/templates/my_portfolio.html
@@ -7,7 +7,7 @@
     <img src="{{ current_user.avatar_url }}" alt="Avatar" width="80" class="rounded-circle me-3">
     {% endif %}
     <div>
-        <h3>{{ current_user.username }}</h3>
+        <h3>{{ current_user.display_name or current_user.username }}</h3>
         <p>{{ current_user.bio }}</p>
         {% if current_user.website_url %}
         <a href="{{ current_user.website_url }}" target="_blank">{{ current_user.website_url }}</a>
