--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,11 @@
         <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav ms-auto">
                 {% if current_user.is_authenticated %}
+                    {% if current_user.is_authenticated and current_user.is_admin %}
+                    <li class="nav-item">
+                        <a class="nav-link text-warning" href="{{ url_for('admin_dashboard') }}">Admin</a>
+                    </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('my_portfolio') }}">My Portfolio</a>
                     </li>
